tests/ui/lang/core/array/oob_0_array.stderr
error: this operation will panic at runtime
 --> $DIR/oob_0_array.rs:9:5
  |
9 |     array[0] = 1;
  |     ^^^^^^^^ index out of bounds: the length is 0 but the index is 0
  |
  = note: `#[deny(unconditional_panic)]` on by default

error: aborting due to 1 previous error

